--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^3.1.0"
   },
   "dependencies": {
-    "formidable": "^2.1.1"
+    "formidable": "^2.1.1",
+    "openai": "^3.3.0"
   }
 }
